added event listener on logIN button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
           class="my-2 input bg-[#F4F5F7] rounded-3xl"
         />
       </div>
-      <button class="btn btn-primary w-full rounded-3xl">Primary</button>
+      <button id="logIn" class="btn btn-primary w-full rounded-3xl">
+        LogIn
+      </button>
     </form>
     <script src="script.js"></script>
   </body>
