created home page navigate functionality

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <label class="font-semibold" for="">Mobile Number</label>
         <br />
         <input
-          type="text"
+          type="number"
+          id="mobile-number"
           placeholder="Enter Your number"
           class="my-2 input bg-[#F4F5F7] rounded-3xl"
         />
@@ -35,7 +36,8 @@
         <label class="font-semibold" for="">4 Digit Pin</label>
         <br />
         <input
-          type="text"
+          id="pin-number"
+          type="number"
           placeholder="Enter 4 digit pin"
           class="my-2 input bg-[#F4F5F7] rounded-3xl"
         />
